# cv_prince

./: .gitignore  README.md  pyproject.toml
cv_prince/chap_07_complex_densities/: factor.py  gaussians.py  gmm.py  gmm_face_detection.py  student.py
cv_prince/chap_08_linear_regression/: __init__.py  bayes_linear_regression.py  gauss_process_regression.py  kernels.py  ml_linear_regression.py  non_linear_regression.py  relevance_vector_regression.py  sparse_linear_regression.py
experiments/datasets/: faces.py
experiments/datasets/faces/: __init__.py  dataset.py  utils.py
experiments/face_detection/: __main__.py
experiments/geometry/: rectangles.py
notebooks/: first.ipynb  utils.py
notebooks/chap_07_complex_densities/: face_detection.ipynb  faces_dataset.ipynb  factor_experiments.ipynb  gmm_experiments.ipynb  student_experiments.ipynb
notebooks/chap_08_linear_regression/: toy_datasets.ipynb
notebooks/chap_09_classification/: classification.ipynb
tests/: conftest.py
tests/chap_07_complex_densities/: conftest.py  test_gaussians.py  test_gmm.py
