[project]
name = "cv-prince"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "plotly (>=5.24.1,<6.0.0)",
    "notebook (>=7.3.2,<8.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "snakeviz (>=2.2.2,<3.0.0)",
    "black[jupyter] (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "flake8 (>=7.1.2,<8.0.0)",
    "pylint (>=3.3.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
